// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getQuadkeyHeatmapFromPoints calculates with known points 1`] = `
Array [
  Object {
    "density": 1,
    "quadkey": "130222000",
  },
  Object {
    "density": 1,
    "quadkey": "212000222",
  },
  Object {
    "density": 1,
    "quadkey": "312000222",
  },
  Object {
    "density": 1,
    "quadkey": "030222000",
  },
]
`;

exports[`getQuadkeyHeatmapFromPoints calculates with known points 2`] = `
Array [
  Object {
    "density": 1,
    "quadkey": "0000000000",
  },
]
`;

exports[`getQuadkeyHeatmapFromPoints calculates with many points 1`] = `
Array [
  Object {
    "density": 1,
    "quadkey": "0000000000",
  },
  Object {
    "density": 0.9333333333333332,
    "quadkey": "0001222222",
  },
  Object {
    "density": 0.8666666666666666,
    "quadkey": "0030000000",
  },
  Object {
    "density": 0.8,
    "quadkey": "0033000000",
  },
  Object {
    "density": 0.7333333333333333,
    "quadkey": "0122222222",
  },
  Object {
    "density": 0.6666666666666665,
    "quadkey": "0303000000",
  },
  Object {
    "density": 0.6,
    "quadkey": "0330000000",
  },
  Object {
    "density": 0.5333333333333333,
    "quadkey": "0333000000",
  },
  Object {
    "density": 0.4666666666666666,
    "quadkey": "3000000000",
  },
  Object {
    "density": 0.4,
    "quadkey": "3003000000",
  },
  Object {
    "density": 0.33333333333333326,
    "quadkey": "3030000000",
  },
  Object {
    "density": 0.26666666666666666,
    "quadkey": "3031222222",
  },
  Object {
    "density": 0.2,
    "quadkey": "3300000000",
  },
  Object {
    "density": 0.13333333333333333,
    "quadkey": "3303000000",
  },
  Object {
    "density": 0.06666666666666667,
    "quadkey": "3330000000",
  },
]
`;
